--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>스탬프투어 통합</title>
+    <script src="https://developer.echoss.co.kr/sdk/echoss-service-provider-min.js"></script>
     <script type="text/javascript" src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script>Kakao.init('828d44097dad7a0d78c5606097547119');</script>
   </head>
