--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>스탬프투어 통합</title>
+    <meta property="fb:app_id" content="287066011402705"/>
+    <meta property="og:title" id="meta_og_title" content="통합 스탬프 투어" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" id="meta_og_image" content="http://m.tranggle.com/html/images/mingle/001/d1db53c31f1ced7cf1e09e1b32602871.png" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:description" id="meta_og_desc" content="통합 스탬프 투어로 전국 명소를 다녀보세요" />
+    <meta property="og:image:width" content="100px" /> 
+<meta property="og:image:height" content="100px" />
     <script src="https://developer.echoss.co.kr/sdk/echoss-service-provider-min.js"></script>
     <script type="text/javascript" src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script> 
