--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>스탬프투어 통합</title>
     <meta property="fb:app_id" content="287066011402705"/>
-    <meta property="og:title" id="meta_og_title" content="통합 스탬프 투어" />
+    <meta property="og:title" id="meta_og_title" content="전국 스탬프 투어" />
     <meta property="og:type" content="website" />
     <meta property="og:image" id="meta_og_image" content="<%= BASE_URL %>sns_share.png" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:description" id="meta_og_desc" content="통합 스탬프 투어로 전국 명소를 다녀보세요" />
+    <meta property="og:description" id="meta_og_desc" content="전국 스탬프 투어로 전국 명소를 다녀보세요" />
     <meta property="og:image:width" content="100px" /> 
     <meta property="og:image:height" content="100px" />
     <script src="https://developer.echoss.co.kr/sdk/echoss-service-provider-min.js"></script>
