--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="fb:app_id" content="287066011402705"/>
     <meta property="og:title" id="meta_og_title" content="전국 스탬프 투어" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" id="meta_og_image" content="<%= BASE_URL %>sns_share.png" />
+    <meta property="og:image" id="meta_og_image" content="<%= BASE_URL %>sns_share_2.png" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:description" id="meta_og_desc" content="전국 스탬프 투어로 전국 명소를 다녀보세요" />
     <meta property="og:image:width" content="100px" /> 
@@ -18,7 +18,7 @@
     <script src="https://developer.echoss.co.kr/sdk/echoss-service-provider-min.js"></script>
     <script type="text/javascript" src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script> 
-    <script>Kakao.init('828d44097dad7a0d78c5606097547119');</script>
+    <script>Kakao.init('2c5ffe3cf551fc4927fb20f82a4cc798');</script>
   </head>
   <body>
     <div id="app"></div>
