올댓스탬프로 문구 수정

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>스탬프투어 통합</title>
+    <title>올댓스탬프</title>
     <meta property="fb:app_id" content="287066011402705"/>
-    <meta property="og:title" id="meta_og_title" content="전국 스탬프 투어" />
+    <meta property="og:title" id="meta_og_title" content="올댓스탬프" />
     <meta property="og:type" content="website" />
     <meta property="og:image" id="meta_og_image" content="<%= BASE_URL %>sns_share_2.png" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:description" id="meta_og_desc" content="전국 스탬프 투어로 전국 명소를 다녀보세요" />
+    <meta property="og:description" id="meta_og_desc" content="올댓스탬프앱은 전국 유명 관광명소를 스탬프투어로 즐기고 여러 지자체에서 제공하는 푸짐한 선물을 받는 앱입니다." />
     <meta property="og:image:width" content="100px" /> 
     <meta property="og:image:height" content="100px" />
     <script src="https://developer.echoss.co.kr/sdk/echoss-service-provider-min.js"></script>
