--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="fb:app_id" content="287066011402705"/>
     <meta property="og:title" id="meta_og_title" content="올댓스탬프" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" id="meta_og_image" content="<%= BASE_URL %>sns_share.png" />
+    <meta property="og:image" id="meta_og_image" content="<%= BASE_URL %>sns_share_3.png" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:description" id="meta_og_desc" content="올댓스탬프앱은 전국 유명 관광명소를 스탬프투어로 즐기고 여러 지자체에서 제공하는 푸짐한 선물을 받는 앱입니다." />
     <meta property="og:image:width" content="100px" /> 
