--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
 
       function set_track_progress () {
       }
+
+      function event_gps_receive (gps) {
+        console.log('gpsOnOff 여부 : ' + gps)
+        localStorage.setItem('getGps', gps)
+      }
     </script>
   </body>
 </html>
